<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="AUTO" Id="{6cbb0485-c1b5-4240-ac4e-50a450712aec}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Init : BOOL := FALSE;
	Varno :BOOL := FALSE;
	MotorIzbira : INT;
	VrtenjePremik : BOOL;
	VrtenjeSmer : BOOL;
	DvigPremik : BOOL;
	DvigSmer : BOOL;
	IztegPremik : BOOL;
	IztegSmer : BOOL;
	PrijemPremik : BOOL;
	PrijemSmer : BOOL;
	Current: POZICIJA;
	N: INT := 5; //v InstructionSize
	Komande0: ARRAY [0..4] OF POZICIJA := [(A := 0, Y := 0, Z := 0, P:= 0 ), 
		(A := 100, Y := 40, Z := 50, P:= 15 ),
		(A := 80, Y := 20, Z := 30, P:= 0 ),
		(A := 120, Y := 0, Z := 15, P:= 12 ),
		(A := 100, Y := 0, Z := 15, P:= 0 )];
	Status: INT := 0;
	PositionNum: INT := 2; // ne rabi
	ItemNumber : INT := 2; //ne rabi
	StageSelect : INT := 0;
	Recept : INT := 0;
	VRoki : INT := 0;
	Prijem : BOOL := FALSE;
	Positions: ARRAY [1..11] OF POZAYZ := [
			(A := 30, Y:=60, Z:= 105),
			(A := 30, Y:=60, Z:= 62),
			(A := 30, Y:=60, Z:= 20),
			(A := 60, Y:=60, Z:= 105),
			(A := 60, Y:=60, Z:= 62), // 5
			(A := 50, Y:=60, Z:= 105),
			(A := 50, Y:=60, Z:= 62),
			(A := 37, Y:=60, Z:= 105),
			(A := 40, Y:=45, Z:= 105),
			(A := 47, Y:=60, Z:= 105), // 10
			(A := 33, Y:=0, Z:= 50)];
	Items: ARRAY [1..5] OF POZAYZ := [
			(A := 5, Y:=60, Z:= 20),
			(A := 5, Y:=60, Z:= 62),
			(A := 5, Y:=60, Z:= 105),
			(A := 50, Y:=60, Z:= 105),
			(A := 50, Y:=60, Z:= 62)];
	StageMax : INT :=10;
	Stages :  ARRAY [1 .. 3] OF ARRAY [1 .. 9] OF KOMANDA :=  [[
		(I := 1, T := 0, P := 16),
		(I := 0, T := 1, P := 0),
		(I := 2, T := 0, P := 16),
		(I := 0, T := 2, P := 0),
		(I := 3, T := 0, P := 16), // 5
		(I := 0, T := 3, P := 0),
		(I := 2, T := 0, P := 16),
		(I := 0, T := 9, P := 0),
		(I := 0, T := 11, P := 0)],
[
		(I := 5, T := 0, P := 16),
		(I := 0, T := 4, P := 0),
		(I := 4, T := 0, P := 16),
		(I := 0, T := 5, P := 0),
		(I := 4, T := 0, P := 16), // 5
		(I := 0, T := 6, P := 0),
		(I := 5, T := 0, P := 16),
		(I := 0, T := 7, P := 0),
		(I := 0, T := 11, P := 0)],
[
		(I := 1, T := 0, P := 16),
		(I := 0, T := 10, P := 0),
		(I := 2, T := 0, P := 16),
		(I := 0, T := 8, P := 0),
		(I := 3, T := 0, P := 16), // 5
		(I := 0, T := 9, P := 0),
		(I := 3, T := 0, P := 16),
		(I := 0, T := 1, P := 0),
		(I := 0, T := 11, P := 0)]];
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>